# FollowBot

./: .gitmodules  Dockerfile  LICENSE  README.md  ros2.dockerfile
.devcontainer/: devcontainer.json
foxglove_layouts/: follow_me_debug.json
scripts/: 01_os_prep.sh  02_ros2_humble_ubuntu.sh  03_ros2_rust_setup.sh  04_foxglove_bridge.sh  05_rplidar_ros.sh  06_nav2_packages.sh  07_csi_camera_ubuntu.sh  20_build_workspace.sh  21_launch_minimal.sh  22_launch_nav2.sh
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: nav2_params.yaml
src/bringup/launch/: follow_me_minimal.launch.py  follow_me_minimal.launch.yaml  follow_me_nav2.launch.py  follow_me_nav2.launch.yaml
src/leg_detector/: CMakeLists.txt  Cargo.toml  package.xml
src/leg_detector/src/: main.rs
src/rvr_ros/: CMakeLists.txt  Cargo.toml  package.xml
src/rvr_ros/src/: lib.rs  main.rs
src/tracker_fuser/: CMakeLists.txt  Cargo.toml  package.xml  setup.cfg  setup.py
src/tracker_fuser/src/: main.rs
src/tracker_fuser/tracker_fuser/: tracker_fuser_node.py
